[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "unit-converter-ai-mcp"
version = "1.0.0"
description = "AI-powered unit converter ai MCP server for agents. Supports convert length, convert weight, convert temperature. By MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "unit", "converter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/unit-converter-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
unit_converter_ai_mcp = "server:main"
